use 512 or below audio buffer
higher buffers have an adverse effect on audio timing

add UpdatingImageProgressBar

reduce channel count back to 1

120 channels are supported with 8k audio buffer

--- a/AAudioTrack_Application/src/main/res/layout/sequencer.xml
+++ b/AAudioTrack_Application/src/main/res/layout/sequencer.xml
@@ -27,7 +27,7 @@
                 android:layout_weight="1"
                 android:orientation="vertical"
                 >
-                <smallville7123.UI.ImageProgressBar
+                <smallville7123.UI.UpdatingImageProgressBar
                     android:id="@+id/CPU_LOAD"
                     android:layout_width="match_parent"
                     android:layout_height="120dp"
